--- a/styles/adaptation/min1224.css
+++ b/styles/adaptation/min1224.css
@@ -23,12 +23,22 @@
     width: 173px;
   }
 
-  .header-nav__burger,
-  .header-nav__hide-btn {
+  .header__burger,
+  .header-nav__item:first-child {
     display: none;
   }
 
   .header-nav {
+    order: 2;
+    position: relative;
+    margin-right: 0;
+    padding: 34px 0 26px 48px;
+    flex-flow: row nowrap;
+    align-items: center;
+    transform: none;
+    transition: none;
+
+
     justify-content: flex-end;
     margin-right: 0;
     margin-left: auto;
@@ -36,23 +46,18 @@
   }
 
   .header-nav__list {
-    position: relative;
-    margin-right: 0;
-    max-width: 100%;
-    width: 100%;
-    padding: 20px 0;
-    flex-flow: row nowrap;
+    display: flex;
+    flex-flow: row wrap;
     justify-content: space-between;
-    border: none;
-    font-size: 18px;
-    line-height: 25px;
-    background: inherit;
-    transform: none;
-    transition: none;
+    flex-grow: 1;
+    margin: 0 0 0 0;
+    max-width: 100%;
   }
 
   .header-nav__link {
     padding: 2px 6px;
+    font-size: 18px;
+    line-height: 25px;
   }
 
   .header-nav__item {
@@ -60,25 +65,32 @@
     margin-right: 0.5%;
   }
 
-  .header-nav__item:first-child {
-    order: 8;
-    align-items: center;
-    margin-left: 80px;
-    margin-bottom: 0;
-    border-bottom: none;
-
+  .header-nav__item:last-child {
+    margin-right: 30px;
   }
 
   .header__login {
     margin-right: 0;
-    padding-top: 1px;
+    padding-top: 0;
     padding-left: 18px;
     padding-right: 5px;
+    padding-bottom: 0;
+    border: none;
     background-position: center left;
   }
 
   .search-open {
     display: none;
+  }
+
+  .search-form__start {
+    margin-right: 10px;
+    padding: 14px;
+    background-size: 22px 22px;
+  }
+
+  .header-submenu__container {
+    background-color: inherit;
   }
 
   .header-submenu {
@@ -97,16 +109,8 @@
     width: 100%;
   }
 
-  .search-form__wrap {
-    position: relative;
-    display: flex;
-    justify-content: flex-end;
-    padding: 5px 15px;
-    background: none;
-  }
-
   .search-form {
-    width: 30%;
+    width: 20%;
   }
 
   .search-form__text {
@@ -135,22 +139,41 @@
     border: none;
     color: var(--text_light);
     background: inherit;
+  }
+
+  .header-submenu__btn::before {
+    content: '';
+    position: absolute;
+    top: 40%;
+    right: 0;
+    width: 13px;
+    height: 13px;
     background-image: url('../../pictures/header/arrow_submenu.svg');
     background-position: center right;
     background-size: 13px 13px;
     background-repeat: no-repeat;
+    transition: transform .4s;
+  }
+
+  .header-submenu__btn_active::before {
+    transform: rotate(180deg);
+  }
+
+  .header-submenu__wrap {
+    position: absolute;
+    top: 75px;
+    left: -42px;
+    padding: 30px 0;
+    width: 300px;
+    height: 300px;
+    background: rgba(0, 0, 0, 0.6);
+    animation: show .4s ease-in-out;
   }
 
   .header-submenu__sublist {
-    position: absolute;
-    overflow-y: auto;
-    top: 63px;
-    left: -42px;
-    padding: 30px;
+    padding: 0 30px;
     width: 300px;
-    height: 300px;
-    background: rgba(0, 0, 0, 0.4);
-    animation: show .4s ease-in-out;
+    height: 240px;
   }
 
   @keyframes show {
@@ -165,7 +188,7 @@
 
   .header-submenu__link {
     display: block;
-    padding: 9px 14px;
+    padding: 6px 14px;
     background-image: url("../../pictures/header/submenu_1-min.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -181,8 +204,8 @@
 
   .simplebar-scrollbar {
     width: 2px;
-    background: var(--background_dark);
-    border-color: var(--background_dark);
+    background: var(--background_btn);
+    border-color: var(--background_btn);
   }
 
   .simplebar-scrollbar:before {
@@ -191,7 +214,7 @@
 
   .simplebar-track.simplebar-vertical {
     width: 2px;
-    background-color: var(--background_btn);
+    background-color: var(--background_dark);
   }
 
   .simplebar-track {
@@ -205,11 +228,11 @@
   }
 
   .hero__heading {
-    padding-right: 35%;
+    max-width: 65%;
   }
 
   .hero__desk {
-    padding-right: 35%;
+    max-width: 65%;
   }
 
   /*gallery*/
@@ -245,8 +268,15 @@
   .swiper-button-next:hover,
   .swiper-button-prev:hover {
     outline: none;
+    background: var(--background_btn);
+    border: 2px solid var(--background_btn);
+  }
+
+  .swiper-button-next:active,
+  .swiper-button-prev:active {
+    outline: none;
     background: var(--background_btn_hover);
-    border: 2px solid var(--background_btn_hover);
+    border: 2px solid var(--background_btn_active);
   }
 
   .gallery__controls,
@@ -276,13 +306,35 @@
 
   .katalog__link:hover {
     color: var(--background_btn);
-    text-decoration: underline;
+  }
+
+  .katalog__link {
+    position: relative;
+    align-self: flex-start;
+  }
+
+  .katalog__link:hover::after {
+    transition: background-color .2s;
+  }
+  .katalog__link:hover::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 3px;
+    width: 100%;
+    height: 1px;
+    background-color: var(--background_btn);
   }
 
   /*--events--*/
 
-  .evets-card__link:hover {
+  .events-card__link:hover {
     font-weight: 600;
+    color: var(--background_btn);
+  }
+
+  .events-card__link:active::before {
+    content: none;
   }
 
   /*--projects--*/
