--- a/styles/sections/modal.css
+++ b/styles/sections/modal.css
@@ -1,44 +1,89 @@
+.modal {
+  position: relative;
+}
+
 .modal__wrap {
-  position: fixed;
+  position: absolute;
   z-index: 50;
   top: 0;
   left: 0;
-  bottom: 0;
   right: 0;
-  overflow: scroll;
   display: flex;
-  flex-flow: column;
+  flex-flow:  column nowrap;
   align-items: center;
-  background: rgba(0, 0, 0, 0.7);
+  background: var(--text_light);
+  animation: showModal .5s ease-in-out;
 }
 
+  @keyframes showModal {
+    from {
+      opacity: 0;
+    }
+
+    to {
+      opacity: 1;
+    }
+  }
+
+
 .modal__picture__wrap {
-  position: relative;
   display: flex;
-  max-height: 95vh;
-  object-fit: cover;
+  width: 100%;
+  max-height: 60vw;
 }
 
 .modal__close-btn {
   position: absolute;
-  top: 2.5vh;
+  top: 0;
   right: 0;
   padding: 15px;
   border: none;
-  background-color: rgba(0, 0, 0, 0.7);
-  background-image: url('../../pictures/header/close.svg');
+  background-color: inherit;
+  background-image: url('../../pictures/modal/close-modal.svg');
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: 16px 16px
 }
 
 .modal__img {
   display: flex;
-  margin-top: 2.5vh;
+  width: 100%;
+  object-fit: cover;
 }
 
-.modal__desc {
-  margin-top: 2em;
-  font-weight: 500;
-  color: var(--text_light);
+.modal__img img {
+  width: 100%;
+}
+
+.modal__author {
+  margin: 0;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 33px;
+}
+
+.modal__heading {
+  margin: 0;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.modal__year {
+  padding: 0;
+  font-size: 12px;
+  line-height: 16px;
+  color: #969696;
+}
+
+.modal__content {
+  padding: 17px 20px 26px 20px;
+  font-size: 16px;
+  line-height: 22px;
+  color: var(--text_dark);
+}
+
+.modal_desc {
+  padding-top: 17px;
+  padding-bottom: 0;
 }
