--- a/styles/sections/publication.css
+++ b/styles/sections/publication.css
@@ -69,7 +69,6 @@
   padding-bottom: 6px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
   font-size: 15px;
-  cursor: pointer;
 }
 
 .btn_hide {
@@ -90,6 +89,7 @@
 .category__desc {
   position: relative;
   flex-grow: 1;
+  cursor: pointer;
 }
 
 .category__btn:checked + .category__custom::after {
@@ -114,7 +114,7 @@
 
 .category__btn:checked ~ .category__desc::after,
 .category__btn:checked ~ .category__desc::before {
-  content: "";  
+  content: "";
   position: absolute;
   right: 0;
   top: 15px;
@@ -141,6 +141,16 @@
 
 .category__btn:not(:disabled):hover + .category__custom {
   border: 1px solid var(--background_btn_hover);
+}
+
+.category__btn:disabled,
+.category__btn:disabled  ~ .category__desc,
+.category__btn:disabled  ~ .category__custom {
+  opacity: .3;
+}
+
+.category__btn:disabled ~ .category__desc {
+  cursor: default;
 }
 
 .publication__category__heading,
@@ -222,7 +232,7 @@
   margin: 0;
   white-space: nowrap;
   overflow: hidden;
-  
+
   text-overflow: ellipsis;
 }
 
@@ -236,7 +246,7 @@
   margin-bottom: 10px;
   margin-top: 3px;
   font-style: italic;
-  font-weight: normal;  
+  font-weight: normal;
 }
 
 .publication-card__btn {
